--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,21 @@
 *.jar
 *.war
 *.ear
+*.log
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.next
+release.properties
+*.db
+
+# ide
+.classpath
+.project
+.settings/
+*.iml
+.idea/
