Update CI & Heroku config

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>fr.jbrunet</groupId>
     <artifactId>dw-ng-boilerplate</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
 
 
     <properties>
