--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
     <artifactId>dw-ng-boilerplate</artifactId>
     <version>0.0.1</version>
 
-
     <properties>
         <dw.version>0.7.1</dw.version>
         <!-- use UTF-8 for everything -->
@@ -76,7 +75,7 @@
     </dependencies>
 
     <build>
-        <finalName>${artifactId}-${version}</finalName>
+        <finalName>${project.artifactId}-${project.version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
