--- a/heroku.yml
+++ b/heroku.yml
@@ -1,7 +1,15 @@
 server:
   type: simple
+  rootPath: /api/*
   applicationContextPath: /
   adminContextPath: /admin
   connector:
     type: http
     port: 8080
+
+# Database settings.
+database:
+  driverClass: org.h2.Driver
+  user: myapp
+  password: myapp
+  url: jdbc:h2:./database
