--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     </prerequisites>
 
     <groupId>fr.jbrunet</groupId>
-    <artifactId>dw-ng-boilerplate</artifactId>
+    <artifactId>dw-ng-starterkit</artifactId>
     <version>0.0.1</version>
 
     <properties>
@@ -136,7 +136,7 @@
                                         implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>fr.jbrunet.app.awesome.AwesomeApplication</mainClass>
+                                    <mainClass>fr.jbrunet.app.dw.ng.starterkit.StarterkitApp</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
